--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ img {
     margin: 0 auto;
 }
 
+label {
+        font-weight: bold;
+}
+
 	/* Khi sidebar mở, tooltip hiển thị bên phải */
 	.sidebar-open .tooltip-text {
 		top: 50%;
