--- a/style.css
+++ b/style.css
@@ -149,20 +149,23 @@
 	    display: flex;
 	    flex-direction: column;
 	}
-        input, button {
+        input {
             width: calc(100% - 20px);
             padding: 10px;
             margin: 10px 0;
             font-size: 16px;
         }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            display: block;
-            margin: 0 auto;
-        }
+	button {
+	    padding: 10px 20px; /* Khoảng trống theo chiều ngang và chiều dọc */
+	    background-color: #4CAF50;
+	    color: white;
+	    border: none;
+	    cursor: pointer;
+	    font-size: 16px;
+	    display: block;
+	    margin: 0 auto;
+	}
+
         button:hover {
             background-color: #45a049;
         }
