--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-       .container_of_ett {
+       .container_of_content {
 	    display: flex;
 	    justify-content: center;
 	    align-items: flex-start;
