--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@
 	    #main {
 	        margin-left: 0; 
 	    }
-	    .container_of_ett {
+	    .container_of_content {
 	      flex-direction: column;
 	      align-items: center;
 	      padding: 0 10px;
