--- a/style.css
+++ b/style.css
@@ -1,24 +1,35 @@
 
-        body {
-            font-family: 'Inter', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5; 
+	body {
+	    font-family: 'Inter', sans-serif;
+	    margin: 0;
+	    padding: 0;
+	    background-color: #f5f5f5; 
 	}
-        .header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            height: 50px;
-            background-color: #4CAF50;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            padding-left: 20px;
-            z-index: 100;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        }
-		
+	.header {
+	    position: fixed;
+	    top: 0;
+	    width: 100%;
+	    height: 50px;
+	    background-color: #4CAF50;
+	    display: flex;
+	    align-items: center;
+	    justify-content: flex-start;
+	    padding-left: 20px;
+	    z-index: 100;
+	    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+	}
+
+	.container_date_input {
+	display: flex;
+	gap: 20px;
+	}
+	
+	.field_date_input {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	}
+
 	.icon-container {
 		display: inline-block;
 		padding: 5px;
