--- a/style.css
+++ b/style.css
@@ -201,49 +201,72 @@
         table th {
             background-color: #f2f2f2;
         }
-@media only screen and (max-width: 768px) {
-   .overlay {
-	    position: fixed;
-	    top: 50px; /* Phía dưới thanh header */
-	    left: 0;
-	    width: 100%;
-	    height: calc(100% - 50px);
-	    background-color: rgba(0, 0, 0, 0.5); /* Màu tối */
-	    z-index: 150;
-	    display: none; /* Ban đầu không hiển thị */
-	    transition: 0.5s;
-    }
-	.sidebar-open #myOverlay {
-	    display: block;
-	} 
+	.gender-select {
+	    display: flex;
+	}
 	
-	.sidebar {
-	        width: 250px; /* Đặt chiều rộng cố định */
-	        position: fixed;
-	        top: 50px; /* Vẫn nằm dưới thanh header */
-	        left: -250px; /* Bắt đầu ẩn ở ngoài màn hình */
-	        transition: left 0.3s ease; /* Hiệu ứng trượt */
-    	}
-	    body.sidebar-open .sidebar {
-	        left: 0; /* Trượt vào màn hình */
+	.gender-select button {
+		flex: 1;
+		padding: 10px 0;
+		border: 1px solid #ccc;
+		background-color: #f5f5f5;
+		cursor: pointer;
+		font-size: 16px;
+		color: #000;
+	}
+
+	.gender-select button:first-child {
+		border-radius: 5px 0 0 5px;
+	}
+
+	.gender-select button:last-child {
+		border-radius: 0 5px 5px 0;
+		border-left: none;
+	}
+
+	@media only screen and (max-width: 768px) {
+	   .overlay {
+		    position: fixed;
+		    top: 50px; /* Phía dưới thanh header */
+		    left: 0;
+		    width: 100%;
+		    height: calc(100% - 50px);
+		    background-color: rgba(0, 0, 0, 0.5); /* Màu tối */
+		    z-index: 150;
+		    display: none; /* Ban đầu không hiển thị */
+		    transition: 0.5s;
 	    }
-	
-	    #main {
-	        margin-left: 0; 
-	    }
-	    .container_of_content {
-	      flex-direction: column;
-	      align-items: center;
-	      padding: 0 10px;
-	      box-sizing: border-box;
-	    }
-	    .calculation-box {
-	      order: 1;
-	    }
-	    .description-box {
-	      order: 2;
-	    }
-}
+		.sidebar-open #myOverlay {
+		    display: block;
+		} 
+		
+		.sidebar {
+		        width: 250px; /* Đặt chiều rộng cố định */
+		        position: fixed;
+		        top: 50px; /* Vẫn nằm dưới thanh header */
+		        left: -250px; /* Bắt đầu ẩn ở ngoài màn hình */
+		        transition: left 0.3s ease; /* Hiệu ứng trượt */
+	    	}
+		    body.sidebar-open .sidebar {
+		        left: 0; /* Trượt vào màn hình */
+		    }
+		
+		    #main {
+		        margin-left: 0; 
+		    }
+		    .container_of_content {
+		      flex-direction: column;
+		      align-items: center;
+		      padding: 0 10px;
+		      box-sizing: border-box;
+		    }
+		    .calculation-box {
+		      order: 1;
+		    }
+		    .description-box {
+		      order: 2;
+		    }
+	}
 /* Đối với màn hình lớn hơn, sidebar vẫn sẽ đẩy nội dung */
 @media only screen and (min-width: 769px) {
     .sidebar {
