--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@
 	
 	.gender-select button {
 		flex: 1;
-		margin-top: 10px
+		margin-top: 10px;
 		padding: 10px 0;
 		border: 1px solid #ccc;
 		background-color: #f5f5f5;
