--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
 	}
 	
 	label {
-	        font-weight: bold;
+	    font-weight: bold;
 	} 
 
 	/* Khi sidebar mở, tooltip hiển thị bên phải */
@@ -162,6 +162,7 @@
 	}
         input {
             width: calc(100% - 20px);
+	    margin: 10px 0;
             padding: 10px;
             margin: 10px 0;
             font-size: 16px;
@@ -207,7 +208,7 @@
 	
 	.select-group button {
 		flex: 1;
-		margin-top: 10px;
+		margin: 10px 0;
 		padding: 10px 0;
 		border: 1px solid #ccc;
 		background-color: #f5f5f5;
