--- a/style.css
+++ b/style.css
@@ -18,7 +18,13 @@
 	    z-index: 100;
 	    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 	}
-
+	.header-title {
+		color: #fff;
+		font-weight: bold;
+		font-size: 20px; /* Adjust size as needed */
+		margin-left: 5px;
+		font-weight: bold;
+	}
 	.container_date_input {
 	display: flex;
 	gap: 20px;
