--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 		margin-left: 5px;
 		font-weight: bold;
 	}
-	# Box hiển thị BMI/Age ZScore---------------
+	/*Box hiển thị BMI/Age ZScore---------------*/
 	fieldset {
 	    width: 97%;
 	    margin: 0 0 1rem 0;
@@ -44,7 +44,7 @@
 	    margin: 0;
 	    list-style: none;
 	}
-	#---------------------------------------
+	/*---------------------------------------*/
 	.container_date_input {
 		display: flex;
 		flex-direction: column;
@@ -54,6 +54,7 @@
 		display: flex;
 		align-items: center;
 		gap: 10px;
+		margin-bottom: 10px;
 	}
 
 	.input-row {
