--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 	}
 	/*Box hiển thị BMI/Age ZScore---------------*/
 	fieldset {
-	    width: 97%;
+	    width: 200px;
 	    margin: 0 0 1rem 0;
 	    padding: 0 0 .2rem 0;
 	}
