--- a/style.css
+++ b/style.css
@@ -312,9 +312,12 @@
 		    }
 		    .description-box {
 		      order: 2;
-		      overflow-x: auto; /* Thêm thanh cuộn ngang nếu nội dung quá lớn */
-                      white-space: nowrap; /* Ngăn nội dung xuống dòng, nếu cần */
 		    }
+		.plot-container {
+                    display: inline-block; /* Giữ mỗi biểu đồ trong khung của nó */
+                    max-height: 300px; /* Đặt chiều rộng tối thiểu cho các biểu đồ */
+                    max-width: 100%; /* Đảm bảo không vượt quá chiều rộng khung */
+		}
 	}
 /* Đối với màn hình lớn hơn, sidebar vẫn sẽ đẩy nội dung */
 @media only screen and (min-width: 769px) {
