--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@
             position: fixed;
             top: 50px; /* Adjust top to start below header */
             left: 0;
-            background-color: #111;
+			background-color: #042331;
             overflow-x: hidden;
             transition: 0.5s;
             padding-top: 20px;
@@ -152,10 +152,11 @@
         }
         .sidebar a:hover {
             background-color: #575757;
+			padding-left: 25px;
         }
 	    
         .sidebar a.selected {
-           background-color: #6A9C89;
+           background-color: #708871;
            color: white;
            font-weight: bold;
         }
@@ -171,53 +172,53 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-       .container_of_content {
-	    display: flex;
-	    justify-content: center;
-	    align-items: flex-start;
-	    gap: 20px;
-	    margin: 0 auto;
-	    max-width: 1200px; /* Giới hạn độ rộng */
-	    padding: 20px;
-	}
-	.description-box {
-	    max-width: 700px;
-	    flex: 1;
-	    background-color: #f8f9fa;
-	    padding: 20px;
-	    border-radius: 10px;
-	    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            line-height: 1.6; /* Dãn cách dòng */
-	    text-align: justify;
-	  }
+		.container_of_content {
+			display: flex;
+			justify-content: center;
+			align-items: flex-start;
+			gap: 20px;
+			margin: 0 auto;
+			max-width: 1200px; /* Giới hạn độ rộng */
+			padding: 20px;
+		}
+		.description-box {
+			max-width: 700px;
+			flex: 1;
+			background-color: #f8f9fa;
+			padding: 20px;
+			border-radius: 10px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			line-height: 1.6; /* Dãn cách dòng */
+			text-align: justify;
+		}
 	
-	.calculation-box {
-	    max-width: 350px;
-	    flex: 1;
-	    background-color: #ffffff;
-	    padding: 20px;
-	    border-radius: 10px;
-	    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	    display: flex;
-	    flex-direction: column;
-	}
-        input {
-            width: calc(100% - 20px);
-	    margin: 10px 0;
-            padding: 10px;
-            margin: 10px 0;
-            font-size: 16px;
-        }
-	button {
-	    padding: 10px 20px; /* Khoảng trống theo chiều ngang và chiều dọc */
-	    background-color: #4CAF50;
-	    color: white;
-	    border: none;
-	    cursor: pointer;
-	    font-size: 16px;
-	    display: block;
-	    margin: 0 auto;
-	}
+		.calculation-box {
+			max-width: 350px;
+			flex: 1;
+			background-color: #ffffff;
+			padding: 20px;
+			border-radius: 10px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			display: flex;
+			flex-direction: column;
+		}
+		input {
+			width: calc(100% - 20px);
+			margin: 10px 0;
+			padding: 10px;
+			margin: 10px 0;
+			font-size: 16px;
+		}
+		button {
+			padding: 10px 20px; /* Khoảng trống theo chiều ngang và chiều dọc */
+			background-color: #4CAF50;
+			color: white;
+			border: none;
+			cursor: pointer;
+			font-size: 16px;
+			display: block;
+			margin: 0 auto;
+		}
 
         button:hover {
             background-color: #45a049;
