--- a/style.css
+++ b/style.css
@@ -37,6 +37,14 @@ body {
 	align-items: center;
 }
 
+.compact-title {
+		font-size: 1.5em; /* Kích thước tương tự h2 */
+		font-weight: bold;
+		margin: 10px 0; /* Thay đổi khoảng cách trên và dưới */
+		padding: 5px 0; /* Giảm padding trên và dưới */
+		line-height: 1.2; /* Tăng hoặc giảm dòng cách nhau nếu cần */
+		color: #213555; /* Giữ nguyên màu sắc của văn bản */
+}
 
 
 /*Box hiển thị BMI/Age ZScore---------------*/
@@ -209,30 +217,30 @@ label {
 	gap: 20px;
 	margin: 0 auto;
 	max-width: 1200px;
-	/* Giới hạn độ rộng */
 	padding: 20px;
 }
 
 .collapsible-header {
 		display: flex;
-		justify-content: space-between;
+		justify-content: flex-start;
 		align-items: center;
 		padding: 0px 10px;
 		font-weight: bold;
-		border-radius: 10px;
 		cursor: pointer;
-		border: 1px solid #ddd;
+		border-bottom: 1px solid #213555; /* Đường border dưới */
 }
 
-.collapsible-header:hover {
-		
+.arrow-icon {
+	width: 28px;
+	height: 28px;
+	margin: 0 10px;
+	transition: transform 0.3s ease; /* Hiệu ứng xoay */
 }
 
-/* Mũi tên collapse/expand */
-.arrow {
-		font-size: 16px;
-		transition: transform 0.3s ease;
+.arrow-icon.expanded {
+	transform: rotate(180deg); /* Xoay 180 độ khi expanded */
 }
+
 
 /* Nội dung collapsible (ẩn ban đầu) */
 .collapsible-content {
@@ -241,12 +249,27 @@ label {
 	transition: max-height 0.4s ease-out, padding 0.4s ease-out; /* Hiệu ứng mượt mà */
 	padding: 0 15px; /* Thêm padding nhưng không hiển thị khi collapsed */
 }
+
 .box-content {
 	padding: 0 15px;
+	margin: 0 auto;
+	max-width: 1100px;
+	padding: 10px;
+	line-height: 1.6;
+	text-align: justify;
 }
 /* Nội dung được mở rộng */
 .collapsible-content.expand {
 	padding: 15px; /* Hiển thị padding khi mở rộng */
+}
+
+.result-box-zscore {
+	max-width: 700px;
+	flex: 1;
+	padding: 5px;
+	background-color: #ffffff;
+	line-height: 1.6;
+	text-align: justify;
 }
 
 .description-box {
@@ -378,6 +401,7 @@ table th {
 	background-color: #1bb193;
 	color: #fff;
 }
+
 .age-days-group.error-border,
 .age-months-group.error-border,
 .input-row.error-border,
@@ -439,7 +463,7 @@ table th {
 	.calculation-box {
 		order: 1;
 	}
-
+	.result-box-zscore,
 	.description-box {
 		order: 2;
 	}
