--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
 		color: #cbc3b0;
 }
 
+.no-data {
+		margin-top: 5px;
+		color: gray;
+		text-align: center;
+		font-style: italic;
+}
+
 body {
 	font-family: 'Inter', sans-serif;
 	margin: 0;
@@ -233,7 +240,7 @@ label {
 .arrow-icon {
 	width: 28px;
 	height: 28px;
-	margin: 0 10px;
+	margin: -10px 10px;
 	transition: transform 0.3s ease; /* Hiệu ứng xoay */
 }
 
