--- a/style.css
+++ b/style.css
@@ -2,6 +2,37 @@
 		color: #cbc3b0;
 }
 
+.modal {
+	display: none; /* Ẩn modal mặc định */
+	position: fixed;
+	z-index: 1000;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.5); /* Nền mờ */
+}
+
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+	max-width: 400px;
+	text-align: center;
+	border-radius: 8px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.modal-title {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 10px;
+	display: block;
+}
+
 .no-data {
 		margin-top: 5px;
 		color: gray;
